# src/routes/article.routes.ts
@@ -89,6 +89,10 @@ export class ArticleRouter {
       }
     );
 
+    this.router.get('/isSaved/:articleId', 
+    verifyJwt(),
+      (req:Request, res:Response) => this.articleController.isSaved(req, res));
+
     this.router.post('/save/:articleId', 
       (req:Request, res:Response) => this.articleController.saveArticle(req, res));
 
